--- a/RPGVXAcecn/vx_user/style.css
+++ b/RPGVXAcecn/vx_user/style.css
@@ -1,4 +1,4 @@
-body         { font-family: "ƒƒCƒŠƒI", Verdana;
+body         { font-family: "Î¢ÈíÑÅºÚ", Verdana;
                background-image: url('../img/back.png');
                color: black;
                margin-left: 1.8em;
@@ -13,7 +13,7 @@ a:active     { color: #FF0000;
 a:hover      { color: #FF0000;
                text-decoration:underline; }
 br           { clear: both; }
-h1           { font-family: "ƒƒCƒŠƒI", Times New Roman;
+h1           { font-family: "Î¢ÈíÑÅºÚ", Times New Roman;
                font-size: 200%;
                line-height: 120%;
                margin-bottom: 1.0em;
@@ -22,7 +22,7 @@ h1           { font-family: "ƒƒCƒŠƒI", Times New Roman;
                border-bottom: 0.1em solid;
                border-color: #E04000;
                clear: both; }
-h2           { font-family: "ƒƒCƒŠƒI", Verdana;
+h2           { font-family: "Î¢ÈíÑÅºÚ", Verdana;
                font-size: 180%;
                line-height: 110%;
                margin-top: 1.0em;
@@ -35,7 +35,7 @@ h2           { font-family: "ƒƒCƒŠƒI", Verdana;
                border: 0.1em dashed;
                border-color: #E04000;
                clear: both; }
-h3           { font-family: "ƒƒCƒŠƒI", Times New Roman;
+h3           { font-family: "Î¢ÈíÑÅºÚ", Times New Roman;
                font-size: 160%;
                line-height: 150%;
                margin-bottom: 0.5em; }
@@ -117,12 +117,12 @@ img.float_n  { margin-left: 1.0em;
                clear: both; }
 TD.topic     { background: #a4d1ff;
                width: 4.2em; }
-TD.vx_topic  { background: #a4d1ff; 
+TD.vx_topic  { background: #a4d1ff;
                font-weight: bold;
                text-align: center;
                padding-left: 1.0em;
                padding-right: 1.0em; }
-TD.vx_line1  { background: #FFFFFF; 
+TD.vx_line1  { background: #FFFFFF;
                text-align: center;
                padding-left: 1.0em;
                padding-right: 1.0em; }
@@ -130,18 +130,18 @@ TD.vx_line2  { background: #e3f0f2;
                text-align: center;
                padding-left: 1.0em;
                padding-right: 1.0em; }
-TD.list_title  { background: #a4d1ff; 
+TD.list_title  { background: #a4d1ff;
                  font-weight: bold;
                  text-align: center;
                  padding-left: 1.0em;
                  padding-right: 1.0 em; }
-TD.list_line1  { background: #ffffff; 
+TD.list_line1  { background: #ffffff;
                  padding-left: 1.0em;
                  padding-right: 1.0 em; }
-TD.list_line2  { background: #e3f0f2; 
+TD.list_line2  { background: #e3f0f2;
                  padding-left: 1.0em;
                  padding-right: 1.0 em; }
-TD.list_line3  { background: #ffcccc; 
+TD.list_line3  { background: #ffcccc;
                  padding-left: 1.0em;
                  padding-right: 1.0 em; }
 blockquote   { border: #CC0000 0.1em solid;
